# akula-python-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  install.bat  install.sh  pyproject.toml  requirements.txt  setup.py
akula_cli/: __init__.py  cli.py
examples/: example_usage.bat  example_usage.sh
